plugins {
	id 'java'
	id 'idea'
	id 'pmd'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.sigursoft'
version = '0.0.1-SNAPSHOT'

repositories {
	mavenCentral()
}

java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(21))
	}
}

dependencies {
	// API
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation 'org.mariadb:r2dbc-mariadb'

	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

	// TESTS
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-params'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
	testImplementation 'org.mockito:mockito-core'
	testImplementation 'org.mockito:mockito-junit-jupiter'
}

test {
	jvmArgs = ['-Xshare:off', '-XX:+EnableDynamicAgentLoading']
	useJUnitPlatform()
	testLogging.events "passed", "skipped", "failed"
}

pmd {
	threads = 8
}
